Fix for 138343 -- Wrong sort order